Remove scrollbar fix default (not used).

--- a/_vw-starter.scss
+++ b/_vw-starter.scss
@@ -10,8 +10,6 @@
    Set the variables below to match your Photoshop file widths (in pixels) and to specify breakpoints based on browser window size.
 
 ---------------------------------------------------------------------------- */
-	// fix for scrollbars
-	$body-width-fix: true !default;
 
 	// base font size must be in pixels!!!
 	$base-font-size: 16px !default;
